# scale-mae

./: .gitignore  .pre-commit-config.yaml  README.md  mwe_setup.md  pyproject.toml  setup.cfg
dockerfiles/: conda.Dockerfile
mae/: engine_finetune.py  engine_pretrain.py  main_eval.py  main_finetune.py  main_linprobe.py  main_pretrain.py  models_mae.py
mae/config/: eurosat.yaml  fmow.yaml  imagenet.yaml  resisc.yaml  sentinel2.yaml
mae/dataloaders/: airound.py  fmow.py  imagelist.py  merge.py  naip.py  sentinel2.py  utils.py  xview.py
mae/eval/: knn.py
mae/exps/: encoder-decoder-vanilla.sh
mae/lib/: fpn.py  transformer.py
mae/scripts/: eval_launcher.py
mae/splits/: train-eurosat.txt  val-fmow.txt
mae/util/: datasets.py  misc.py  pos_embed.py  resolution_sched.py
requirements/: runtime.txt
scalemae/: __init__.py  clean_data.py  engine_finetune.py  engine_pretrain.py  main_eval.py  main_finetune.py  main_linprobe.py  main_pretrain.py  models_mae.py  models_vit.py  wandb_log.py
scalemae/config/: __main__.py  eurosat.yaml  fmow.yaml  naip.yaml  resisc.yaml  sentinel2.yaml  xview2.yaml
scalemae/dataloaders/: airbus.py  cvbrct.py  eurosat.py  fmow.py  geo.py  imagelist.py  imagenet100.py  merge.py  mlrsnet.py  naip.py  optimal.py  resic45.py  sentinel2.py  ucmerced.py  utils.py  whurs.py
scalemae/demo/: __init__.py  __main__.py  kwcoco_demodata.py
scalemae/eval/: knn.py
scalemae/exps/: encoder-decoder-vanilla.sh
scalemae/lib/: fpn.py  gpt.py  scheduler.py  transformer.py  transforms.py
scalemae/samplers/: distributed.py
scalemae/scripts/: eval_launcher.py  gen_scale_perf_plots.py
scalemae/scripts/evalconf/: demo-conf.yaml  dgx-conf.yaml
scalemae/splits/: train-aerial.txt  train-mlrsnet.txt  train-resisc.txt  val-aerial.txt  val-eurosat.txt  val-mlrsnet.txt  val-resisc.txt
scalemae/util/: crop.py  datasets.py  dist_utils.py  pos_embed.py  resolution_sched.py
