# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name=scalemae
version = 0.1.0
author = Colorado J Reed, Ritwik Gupta, Shufan Li
author_email = colorado.j.reed@gmail.com
description = Scale-MAE: A Scale-Aware Masked Autoencoder for Multiscale Geospatial Representation Learning 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bair-climate-initiative/scale-mae
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
keywords = remote sensing, representation learning

[options]
install_requires =
    # BSD 3-Clause License
    # numpy, version 1.21 needed for datetime64[ns] support
    numpy >=1.21.0,<2.0.0
    timm == 0.6.12
    wandb

python_requires = ~= 3.9

packages = find:

[options.packages.find]
include = mae*

[options.extras_require]
dev =
    # pre-commit, version 2.15 needed for python 3.10 support
    pre-commit>=2.15.0,<3.0.0
    # black 21.8+ required for Jupyter support
    black[jupyter]>=21.8,<23
    # flake8 3.8+ depends on pyflakes 2.2+, which fixes a bug with mypy error code ignores:
    # https://github.com/PyCQA/pyflakes/pull/455
    flake8>=3.8,<5
    # isort 5.8+ required for extend_skip option
    isort[colors]>=5.8,<6
    # pydocstyle 6.1+ required for pyproject.toml support
    pydocstyle[toml]>=6.1,<7
    # pyupgrade 1.24+ required for --py37-plus flag
    pyupgrade>=1.24,<3
    # pytest 6.1.2+ required by nbmake
    pytest>=6.1.2,<8
    # pytest-cov 2.4+ required for pytest --cov flags
    pytest-cov>=2.4,<4
    # for mypy
    types-requests>=2.28.9,<2.30.0
    types-python-dateutil>=2.8.19,<2.9.0


[flake8]
max-line-length = 100
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Source
    data/,
    images
    logs/,
    output/,

    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/
